1998-11-20  Dominik Vogt  <dominik_vogt@hp.com>

	* configure.in: Version 2.1.2 released (CVS tag = version-2_1_2)
	and current version bumped to 2.1.3.

1998-11-19  Dominik Vogt  <dominik_vogt@hp.com>

	* libs/envvar.c (strIns): fixed array bounds read viaolation

	* fvwm/menus.c (AddToMenu): multiple tabs allowed between left and
	right part of menu item name; all other tabs are replaced by spaced

	* fvwm/fvwm2.1: updated AddToMenu/AddToFunc syntax

	* fvwm/builtins.c (CreateFlagString): 
	(FreeConditionMask): 
	(DefaultConditionMask): 
	(CreateConditionMask): 
	(MatchesContitionMask): 
	(Circulate): 
	(DirectionFunc):
 	Applied 'Direction' patch (added and modified some functions).

	* fvwm/builtins.c (SetMenuStyle): fixed coredump (NULL action
	referenced with NEXT style).

1998-11-18  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/move.c (moveLoop): Applied SnapAttraction update patch

	* fvwm/resize.c (resize_window):  fixed bug that prevented moving from
	a mouse button from working with ClickToFocus

	* fvwm/move.c (moveLoop): Applied SnapAttraction patch.
	(moveLoop): fixed bug that prevented moving from a mouse button from
	working with ClickToFocus

	* fvwm/builtins.c (SetMenuStyle1): fixed memory leak

	* fvwm/menus.c (MakeMenu): bugfix: Titles in newmenu patch drawn too
	far right.

	* fvwm/**: Applied newmenu patch by German Gomez Garcia.

1998-11-18  Paul D. Smith  <psmith@gnu.org>

	* fvwm/menus.c (NewMenuRoot): Initialize the in_use flag.

	* fvwm/builtins.c (ReadButtonFace): Don't free() NULL pointers.
	(CursorStyle): Message was printing already-freed memory; don't
	free until afterwards.

1998-11-17  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/misc.c (Destroy): applied mini-icon compile patch by Tim Phipps

Mon Nov 16 20:30:16 1998  DanEspen  <dje@blue>

	* libs/ColorUtils.c (BRIGHTNESS_FACTOR): Set adjustment factors
	to fvwm2 defaults instead of scwm numbers.

Sun Nov 15 12:24:12 1998  DanEspen  <dje@blue>
