@@ -14,6 +14,9 @@ Autoconf & automake support.
 Dominik Vogt:
 Improved ShuffleButtons algorithm (FvwmButtons), button geometries (FvwmButtons), Menu Position Hints, XResources.c, various move/resize and menu enhancements, MoveToPage, MoveToDesk, various parsing functions, COPYING file
 
+Bob Woodside:
+StartsOnPage style, Stacking Order chain.
+
 A.J. Weber:
 SnapAttraction patch
 
